# rules_py_bug_repro

./: BUILD.bazel  MODULE.bazel
